tdf#100830 drawingML import: handle <a:alphaModFix>

Fill transparency on the UI. Regression from commit
57450afb768c085df0ba2344aa94b5f843060178 (DOCX import: declare wps as a
supported feature, 2013-12-03), as the VML import handled this.

Change-Id: I654b51d51448d25d400979a4a62189b86126ac01